--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -22,15 +22,22 @@ RUN sqlc generate && go mod tidy && CGO_ENABLED=0 GOOS=linux go build -a -instal
 
 FROM alpine:latest
 
-RUN apk --no-cache add ca-certificates
+RUN apk --no-cache add ca-certificates curl
 
 WORKDIR /root/
+
+# Install sqlc for runtime
+RUN curl -L https://github.com/sqlc-dev/sqlc/releases/download/v1.25.0/sqlc_1.25.0_linux_amd64.tar.gz | tar -xz -C /usr/local/bin
 
 # Copy the binary from builder stage
 COPY --from=builder /app/main .
 
 # Copy migration files
 COPY --from=builder /app/migrations ./migrations
+
+# Copy sqlc configuration and queries
+COPY --from=builder /app/sqlc.yaml ./
+COPY --from=builder /app/internal/database/queries ./internal/database/queries
 
 # Expose port
 EXPOSE 8080
